# market-observability

./: README.md  docker-compose.yml
src/monitoring/: Dockerfile  process_metrics.py
src/producer/: CMakeLists.txt  Dockerfile  main.cpp  producer.cpp  producer.h  producer_stats.proto
src/producer/market_fetcher/: CMakeLists.txt  tick.json  tick.proto
src/producer/metrics/: CMakeLists.txt  producer_stats.proto
